// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBridges > target agents snapshot 1`] = `
"# AGENTS.md — hAIve context

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target aider snapshot 1`] = `
"# CONVENTIONS.md — hAIve context (Aider)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target claude snapshot 1`] = `
"# CLAUDE.md — hAIve context

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cline snapshot 1`] = `
"# hAIve rules (Cline)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cody snapshot 1`] = `
"# hAIve rules (Cody / Sourcegraph)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target continue snapshot 1`] = `
"# hAIve rules (Continue)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target copilot snapshot 1`] = `
"# hAIve rules (GitHub Copilot)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cursor snapshot 1`] = `
"---
description: hAIve shared memories & block sensors (auto-generated)
alwaysApply: true
---
# hAIve rules (Cursor)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target gemini snapshot 1`] = `
"# GEMINI.md — hAIve context

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target roo snapshot 1`] = `
"# hAIve rules (Roo Code)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target windsurf snapshot 1`] = `
"# hAIve rules (Windsurf)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target zed snapshot 1`] = `
"# hAIve rules (Zed)

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared context and enforcement.

**Before editing** for a goal: call \`get_briefing\` (task + files/symbols) to load ranked context.
**When an approach fails**: call \`mem_tried\` right away.
**Before closing**: run \`haive enforce finish\` and capture learnings via the \`post_task\` prompt.

If \`get_briefing\` returns \`action_required\`, surface each item to the developer and wait for
explicit confirmation before modifying any code.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;
